# feedforge

./: .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  skaffold.yaml
.claude/agents/: reviewer.md
.claude/rules/: k8s-yaml.md  terraform.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build-and-bump.yaml  ci.yaml  deploy.yaml
.plans/: 20260430-argocd-terraform.md  20260503-argocd-phase2-applications.md  20260503-argocd-phase3-ci-swap.md  20260506-argocd-phase4-narrow-iam.md  README.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_digest_sent_at.py
backend/app/: config.py  database.py  digest.py  fetcher.py  main.py  metrics.py  middleware.py  secrets.py  summarizer.py
backend/app/models/: __init__.py  article.py  feed.py
backend/app/routers/: articles.py  feeds.py  health.py  metrics.py
backend/app/schemas/: article.py  feed.py
docs/: cloud-sql-security.md  local-development.md  plan.md  secret-manager.md  service-account-token-audit.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ArticleCard.tsx  ArticleList.tsx  (+3 more)
k8s/base/: kustomization.yaml  namespace-limitrange.yaml  namespace-quota.yaml  namespace.yaml
k8s/bootstrap/: install-csi-secrets-store.sh  prometheus-adapter-auth-reader.yaml
k8s/local/: kind-config.yaml
k8s/phase0-verify/: nginx.yaml
scripts/: local-cluster-down.sh  local-cluster-up.sh
(+173 files in other folders)
