[project]
name = "feedforge-backend"
version = "0.1.0"
description = "FeedForge backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.14,<2",
    "pydantic-settings>=2.7,<3",
    "feedparser>=6.0,<7",
    "redis>=5.0,<6",
    "google-genai>=1.0,<2",
    "httpx>=0.28,<1",
    "prometheus-client>=0.21,<1",
]
